<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">SwiftNote</string>
  <string name="no_notes">You have no notes.</string>
  <string name="title">Title</string>
  <string name="body">Body</string>
  <string name="confirm">Confirm</string>
  <string name="new_note">New Note</string>
  <string name="note_add">Add New Note</string>
  <string name="edit_note">Edit Note</string>
  <string name="authenticate">Sign In</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="signin">Login</string>
  <string name="signup">Create An Account</string>
  <string name="powered_by_simplenote">Powered by SimpleNote</string>
  <string name="new_to_simplenote">Don\'t have a SimpleNote account?</string>
  <string name="all_notes">All notes</string>
  <!-- Licensing -->
  <string name="license_invalid">No license for SwiftNote found, please purchase in the Android Market</string>
  <!-- Menu -->
  <string name="menu_add">Add Note</string>
  <string name="menu_preferences">Preferences</string>
  <string name="menu_refresh">Refresh</string>
  <string name="menu_save">Save</string>
  <string name="menu_delete">Delete</string>
  <string name="menu_edit">Edit Note</string>
  <string name="menu_delete_note">Delete Note</string>
  <!-- Context Menu -->
  <string name="context_delete">Delete Note</string>
  <string name="context_edit">Edit Note</string>
  <!-- Status -->
  <string name="status_authenticating">Contacting SimpleNote...</string>
  <string name="status_initializing">Initializing...</string>
  <string name="status_create_account">Creating Account</string>
  <string name="status_loggingin">Logging In</string>
  <!-- Status Bar -->
  <string name="status_credentials_invalid_ticker">SimpleNote account information rejected</string>
  <string name="status_credentials_invalid_title">SimpleNote Account</string>
  <string name="status_credentials_invalid_description">Your saved account information was rejected by SimpleNote\'s server. Please re-enter your Email and Password.</string>
  <string name="status_credentials_missing_ticker">SimpleNote account information missing</string>
  <string name="status_credentials_missing_title">SimpleNote Account</string>
  <string name="status_credentials_missing_description">Email and Password are not stored for your account</string>
  <string name="status_syncing_ticker">SimpleNote Sync Started</string>
  <string name="status_syncing_title">SimpleNote Syncing</string>
  <string name="status_syncing_description">Syncing notes with SimpleNote servers</string>
  <!-- Error messages -->
  <string name="error_empty">Email and Password are required, fill them out and try again.</string>
  <string name="error_authentication">Sign in failed, please check your email and password.</string>
  <string name="error_authentication_stored">Sign in failed with saved email and password. Please make sure they are correct and try again.</string>
  <string name="error_no_connection">Unable to connect to the internet. Please try again later.</string>
  <string name="error_account_unavailable">Sorry, that account address is not available</string>
  <!-- Format -->
  <string name="display_date_format">dd MMM</string>
  <!-- Preferences -->
  <string name="pref_background_category">Background Syncing</string>
  <string name="pref_background_title">Enable Syncing</string>
  <string name="pref_background_description">Updates notes in the background</string>
  <string name="pref_frequency_title">Sync Schedule</string>
  <string name="pref_frequency_description">How often to sync notes</string>
  <string name="pref_account_category">SimpleNote Account</string>
  <string name="pref_account_title">Login Details</string>
  <string name="pref_account_description">Enter your SimpleNote login details</string>
  <string name="pref_account_email">Email</string>
  <string name="pref_account_password">Password</string>
  <string name="pref_account_clear_title">Sign Out</string>
  <string name="pref_account_clear_description">Sign out and remove notes from device.</string>
  <string name="pref_account_clear_dialog_title">Sign out of SimpleNote on this device?</string>
  <string name="pref_account_clear_dialog_yes">Yes, please</string>
  <string name="pref_account_clear_dialog_no">No, thanks</string>
  <!-- Preferences Options -->
  <string name="every10minutes">Every 10 Minutes</string>
  <string name="every30minutes">Every 30 Minutes</string>
  <string name="every1hour">Every Hour</string>
  <string name="every2hour">Every 2 Hours</string>
  <string name="every4hour">Every 4 Hours</string>
  <string name="every8hour">Every 8 Hours</string>
  <!-- Search -->
  <string name="search_hint">Search notes</string>
  <string name="no_results">No notes were found for your search of \'%s\'</string>
  <string name="results_title">Notes for - %s</string>
</resources>
