<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/pref_background_category">
    <CheckBoxPreference android:title="@string/pref_background_title"
      android:summary="@string/pref_background_description"
      android:defaultValue="false"
      android:key="background_enabled" />
    <ListPreference android:title="@string/pref_frequency_title"
      android:summary="@string/pref_frequency_description"
      android:key="background"
      android:defaultValue="@integer/every1hour"
      android:entries="@array/background"
      android:entryValues="@array/background_values"
      android:dependency="background_enabled" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_account_category">
    <Preference android:title="@string/pref_account_title"
      android:summary="@string/pref_account_description"
      android:key="customPref" />
  </PreferenceCategory>
</PreferenceScreen>
