<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/splashScroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
  <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/splashLogo"
        android:src="@drawable/swiftnote"
        style="@style/SplashLogo" />
    <ImageView
        android:id="@+id/splashLabel"
        android:src="@drawable/splash_header"
        style="@style/SplashHeader" />
    <EditText
        android:id="@+id/splash_email"
        android:hint="@string/email"
        style="@style/Input.Splash.Email" />
    <EditText
        android:id="@+id/splash_password"
        android:hint="@string/password"
        style="@style/Input.Splash.Password" />
    <Button
        android:id="@+id/splash_login"
        android:text="@string/signin"
        style="@style/Shadowed.Button.Splash.Blue" />
    <TextView
        android:id="@+id/splash_new_to_simplenote"
        android:text="@string/new_to_simplenote"
        style="@style/Shadowed.SplashText" />
    <Button
        android:id="@+id/splash_signup"
        android:text="@string/signup"
        style="@style/Shadowed.Button.Splash.Black" />
  </LinearLayout>
</ScrollView>
