<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
  <TextView
      android:id="@+id/emailLabel"
      android:text="@string/email"
      android:gravity="top"
      style="@style/DialogLabel" />
  <EditText
      android:id="@+id/email"
      style="@style/DialogInput" />
  <TextView
      android:id="@+id/passwordLabel"
      android:text="@string/password"
      style="@style/DialogLabel" />
  <EditText
      android:id="@+id/password"
      style="@style/DialogInput"
      android:password="true" />
  <Button
      android:id="@+id/loginBtn"
      android:text="@string/signin"
      android:layout_width="70dip"
      android:layout_height="40dip"
      android:gravity="bottom"
      android:layout_gravity="left" />
</LinearLayout>
